# rosneuro_msgs

./: CMakeLists.txt  package.xml
msg/: Acquisition.msg  DeviceInfo.msg  NeuroData.msg  NeuroDataFloat.msg  NeuroDataInfo.msg  NeuroDataInt32.msg  NeuroDataSet.msg  NeuroDecoder.msg  NeuroEvent.msg  NeuroFrame.msg  NeuroHeader.msg  NeuroOutput.msg
srv/: GetAcquisitionInfo.srv  GetNeuroDataInfo.srv
